--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -228,7 +228,7 @@ jobs:
           script: |
             echo Pull image
             docker pull jetenow/squaddev:latest
-            docker run -p 3000:80 -t jetenow/squaddev:latest
+            docker run -p 3000:80 jetenow/squaddev:latest
 
         #script: |
         #  IMAGE_ID=ghcr.io/${{ github.repository_owner }}/squaddev
