--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -153,51 +153,12 @@ jobs:
       - name: List files
         run: ls -lah
 
-      #- name: docker login
-      #  env:
-      #    DOCKER_USER: ${{ secrets.DOCKER_USER }}
-      #    DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      #    repository: ${{ secrets.DOCKER_APP }}:${{ env.tag }} # jetenow/squaddev ==  image_name
-      #    tags: latest, ${{ secrets.DOCKER_TOKEN }}
-      #  run: |
-      #    docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-
-      #- name: push image to ghcr.io
-      #  uses: redhat-actions/push-to-registry@v2
-      #  with:
-      #    image: ${{ steps.build-image.outputs.image }}
-      #    tags: ${{ steps.build-image.outputs.tags }}
-      #    registry: ghcr.io
-      #    username: ${{ github.actor }}
-      #    password: ${{ secrets.GITHUB_TOKEN }}
-
-      
-      
-      #
-      #- name: Log in to registry
-      #  run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-#
-      #- name: Build image
-      #  run: docker build -t ghcr.io/${{ github.repository }}/squaddev:${{ env.tag }} .
-      #  #run: docker build -t jetenow/squaddev:${{ env.tag }} .
-#
-      #- name: Push image
-      #  run: |
-      #    IMAGE_ID=ghcr.io/${{ github.repository_owner }}/squaddev
-#
-      #    docker tag squaddev $IMAGE_ID:${{ env.tag }}
-      #    docker push $IMAGE_ID:${{ env.tag }}
-
-
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      #- name: Set up Docker Buildx
-      #  uses: docker/setup-buildx-action@v1
-      
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
@@ -211,13 +172,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
-            
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@master
         with:
@@ -226,8 +180,11 @@ jobs:
           password: ${{ secrets.PASSWORD_PROD }}
           port: ${{ secrets.PORT_PROD }}
           script: |
+            echo Login
+            echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+
             echo Delete image
-            #docker rmi -f squaddev
+            docker rmi -f squaddev
 
             echo Pull image
             docker pull jetenow/squaddev:latest
@@ -235,13 +192,6 @@ jobs:
             echo Run new one
             docker run -p 3000:80 squaddev jetenow/squaddev:latest
 
-        #script: |
-        #  IMAGE_ID=ghcr.io/${{ github.repository_owner }}/squaddev
-#
-        #  echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-#
-        #  docker pull $IMAGE_ID:${{ env.tag }}
-        #  docker run -p 3000:80 -it $IMAGE_ID:${{ env.tag }}
 
 
 
