--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -184,13 +184,13 @@ jobs:
             echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
 
             echo Delete image
-            docker rmi -f jetenow/squaddev
+            docker rm -f $(docker ps -a | grep squaddev | awk '{print $1}')
 
             echo Pull image
             docker pull jetenow/squaddev:latest
 
             echo Run new one
-            docker run -p 3000:80 --name squaddev jetenow/squaddev:latest
+            docker run -d -p 3000:80 --name squaddev jetenow/squaddev:latest
 
 
 
