--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -128,6 +128,7 @@ jobs:
             #echo "::set-output name=tag::${{steps.extract_version.outputs.version}}"
             echo "TAG=${{steps.extract_version.outputs.version}}" >> $GITHUB_ENV
           fi
+          echo ENV : ${{ env.TAG }}
         id: image_name
 
       #- name: Image name
@@ -180,6 +181,7 @@ jobs:
           password: ${{ secrets.PASSWORD_PROD }}
           port: ${{ secrets.PORT_PROD }}
           script: |
+            echo echo ENV : ${{ env.TAG }}
             echo Login
             echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
 
