--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -142,7 +142,8 @@ jobs:
     steps:
 
       - run: |
-          echo ENV : ${{ env.TAG }}
+          echo TAG : ${{ env.TAG }}
+          echo branch_name : ${{ env.branch_name }}
 
       - uses: actions/download-artifact@v2
         with:
