--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -129,6 +129,8 @@ jobs:
             echo "TAG=${{steps.extract_version.outputs.version}}" >> $GITHUB_ENV
           fi
           echo ENV : ${{ env.TAG }}
+          echo version : ${{steps.extract_version.outputs.version}} / ${steps.extract_version.outputs.version}
+          echo branch : ${steps.extract_branch.outputs.branch}
         id: image_name
 
       #- name: Image name
