--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -126,10 +126,10 @@ jobs:
           fi
           if [[ ${{ env.branch_name }} == "main" ]]; then
             #echo "::set-output name=tag::${{steps.extract_version.outputs.version}}"
-            echo "TAG=${{steps.extract_version.outputs.version}}" >> $GITHUB_ENV
+            echo "tag=${{steps.extract_version.outputs.version}}" >> $GITHUB_ENV
           fi
           echo TAG : "TAG=${{steps.extract_version.outputs.version}}"
-          echo ENV : ${{ env.TAG }}
+          echo ENV : ${{ env.tag }}
           echo version 1 : ${{steps.extract_version.outputs.version}}
         id: image_name
 
