--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,6 @@ on:
     inputs:
       existVersion:
         description: 'Existing version to deploy'
-env:
-  TAG: ""
 
 jobs:
 
@@ -35,11 +33,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      - uses: actions/download-artifact@v2
-        with:
-          name: sources
-          path: ./
-      
       - name: Setup node
         uses: actions/setup-node@v2
         with:
@@ -47,11 +40,15 @@ jobs:
 
       - run: npm install
       - run: npm test
-      #- run: npm run build
-
+      - run: npm run build
 
       - name: List files
         run: ls -lah
+
+      - uses: actions/download-artifact@v2
+        with:
+          name: sources
+          path: ./
         
   #QG:
   #  name: SonarCloud
@@ -129,12 +126,17 @@ jobs:
           if [[ ${{ env.branch_name }} == "main" ]]; then
             #echo "::set-output name=tag::${{steps.extract_version.outputs.version}}"
             echo "tag=${{steps.extract_version.outputs.version}}" >> $GITHUB_ENV
+            echo ${{steps.extract_version.outputs.version}} >> MY_ENV_FILE.txt
           fi
-          echo ${{steps.extract_version.outputs.version}} >> $env.TAG
-          echo TAG : "TAG=${{steps.extract_version.outputs.version}}"
-          echo ENV : ${{ env.TAG }}
-          echo version 1 : ${{steps.extract_version.outputs.version}}
+
+          echo MY_ENV_FILE
+          cat MY_ENV_FILE.txt
         id: image_name
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: sources
+          path: ./
 
       #- name: Image name
       #  run: echo ${{ steps.feature_name.outputs.feature }} - ${{ steps.tag_name.outputs.tag }}
@@ -147,18 +149,20 @@ jobs:
     steps:
 
       - run: |
-          echo TAG : ${{ env.TAG }}
-          echo branch_name : ${{ env.branch_name }}
+          echo MY_ENV_FILE
+          cat MY_ENV_FILE.txt > $TAG
+          echo TAG: $TAG
+          echo "TAG=${{$TAG}}" >> $GITHUB_ENV
 
       - uses: actions/download-artifact@v2
         with:
           name: sources
           path: ./
 
-      - name: Rebuild sources
-        run: |
-          npm install
-          npm run build
+      #- name: Rebuild sources
+      #  run: |
+      #    npm install
+      #    npm run build
       
       - name: List files
         run: ls -lah
@@ -181,6 +185,12 @@ jobs:
     needs: build-image
     runs-on: ubuntu-latest
     steps:
+
+      - run: |
+          echo MY_ENV_FILE
+          cat MY_ENV_FILE.txt > $TAG
+          echo TAG: $TAG
+          echo "TAG=${{$TAG}}" >> $GITHUB_ENV
 
       - name: SSH on PROD
         uses: appleboy/ssh-action@master
