--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -188,7 +188,7 @@ jobs:
 
       - run: |
           echo MY_ENV_FILE
-          cat MY_ENV_FILE.txt > $TAG
+          cat MY_ENV_FILE.txt > TAG
           echo TAG: $TAG
           echo "TAG=${{$TAG}}" >> $GITHUB_ENV
 
