--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,10 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: sources
-          path: ./
+          path: |
+            ./
+            !node_modules/
+            
         
   #QG:
   #  name: SonarCloud
