--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -137,7 +137,7 @@ jobs:
   build-image:
     name: Build docker image
     if: ${{ always() }}
-    needs: [version, build]
+    needs: [build]
     runs-on: ubuntu-latest
     steps:
 
