--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -179,8 +179,8 @@ jobs:
     name: R7
     needs: build-image
     runs-on: ubuntu-latest
-    #if: contains(github.ref, "develop")
-    if: ${{ github.ref == 'refs/heads/develop' }}
+    if: contains(github.ref, 'develop')
+    #if: ${{ github.ref == 'refs/heads/develop' }}
     steps:
       - name: SSH on R7
         uses: appleboy/ssh-action@master
