--- a/.github/workflows/wfl_call.yml
+++ b/.github/workflows/wfl_call.yml
@@ -33,6 +33,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+      - run: echo sub wfl
+
       - name: SSH on ${{ inputs.server_name }}
         uses: appleboy/ssh-action@master
         with:
