--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,10 @@
 name: Build
 
 on:
-#  push:
-#    branches:
-#      - main
-#      - develop
+  push:
+    branches:
+      - main
+      - develop
   workflow_dispatch:
 
 jobs:
