--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,11 @@
 name: Build
 
-on:
-  push:
-    branches:
-      - main
-      - develop
-  workflow_dispatch:
+#on:
+#  push:
+#    branches:
+#      - main
+#      - develop
+#  workflow_dispatch:
 
 jobs:
 
