--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,3 +37,57 @@ jobs:
 
       - run: npm install
       - run: npm test
+      - run: npm run build
+
+      - name: List files
+        run: ls -lah
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: sources
+          path: |
+            ./
+            !node_modules/
+
+  build-image:
+    name: Build docker image
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+
+      - uses: actions/download-artifact@v2
+        with:
+          name: sources
+          path: ./
+
+      - name: List files
+        run: ls -lah
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Extract branch name
+        shell: bash
+        run: |
+          echo "branch_name=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
+        id: extract_branch
+
+      - name: Determine tag
+        run: |
+          if [[ ${{ env.branch_name }} =~ "develop" ]]; then
+            echo "::set-output name=tag::r7"
+          fi
+          if [[ ${{ env.branch_name }} == "main" ]]; then
+            echo "::set-output name=tag::latest"
+          fi
+        id: tag_name
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/squaddev:${{ steps.tag_name.outputs.tag }}
